# NatsAccessPoint

./: .gitmodules  CMakeLists.txt  NatsAccessPoint.service  README.md  buildScriptLinux  main.cpp
src/: apihandler.cpp  apihandler.h  natsservice.cpp
src/api/: natshandler.cpp  natshandler.h  tcpserver.cpp  tcpserver.h
src/singletones/: settings.cpp  settings.h
